<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tablerow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_symbol"
            android:id="@+id/textview"
            android:layout_weight="1"
             />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stockSymbolEditText"
            android:ems="10"
            android:inputType="text"
            android:layout_weight="1">
            <requestFocus/>
           </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_symbol"
            android:id="@+id/enterStockSymbol"

           />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/egg_shell"
        android:id="@+id/tablerow2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_symbol_list"
            android:padding="5dp"
            android:textColor="@color/black"
            android:id="@+id/symbollisttextview"
            android:gravity="center_horizontal"
            android:textSize="@dimen/stock_list_text"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/egg_shell"
        android:id="@+id/tablerow3">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stockscrollView"
            android:padding="5dp"
            android:layout_span="2">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="yes"
            android:id="@+id/stockTableScrollView"
            android:padding="5dp">
        </TableLayout>

        </ScrollView>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tablerow4">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_all_symbol"
            android:id="@+id/deleteStockButton"
            android:layout_weight="1"

            />
    </TableRow>
</TableLayout>
